# Snitch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ascii/: alpine.txt  amogos.txt  android.txt  arch.txt  arch_old.txt  archbang.txt  archcraft.txt  arco.txt  artix.txt  ascii.txt  bedrock.txt  buildroot.txt  cachy.txt  centos.txt  crux.txt  crystal.txt  dahlia.txt  debian.txt  deepin.txt  devuan.txt  dragonfly.txt  elementary.txt  endeavour.txt  evolution.txt  fedora.txt  freebsd.txt  garuda.txt  gentoo.txt  guix.txt  hyperbola.txt  iglunix.txt  instant.txt  kali.txt  lite.txt  macos.txt  mageria.txt  manjaro.txt  mint.txt  mx.txt  neon.txt  (+23 more)
config/: config.cpp  config.h
core/: ascii.cpp  ascii.h  dispatcher.cpp  dispatcher.h
stats/CPU/: CPU.cpp  CPU.h
stats/GPU/: GPU.cpp  GPU.h
stats/HOST/: HOST.cpp  HOST.h
stats/KERNEL/: KERNEL.cpp  KERNEL.h
stats/OS/: OS.cpp  OS.h
stats/UPTIME/: UPTIME.cpp  UPTIME.h
stats/USER/: USER.cpp  USER.h
stats/battery/: battery.cpp  battery.h
stats/cpu/: cpu.cpp  cpu.h
stats/desktop/: desktop.cpp  desktop.h
stats/disk/: disk.cpp  disk.h
stats/gpu/: gpu.cpp  gpu.h
stats/host/: host.cpp  host.h
stats/kernel/: kernel.cpp  kernel.h
stats/memory/: memory.cpp  memory.h
stats/os/: os.cpp  os.h
stats/shell/: shell.cpp  shell.h
stats/terminal/: terminal.cpp  terminal.h
stats/uptime/: uptime.cpp  uptime.h
stats/user/: user.cpp  user.h
utils/: color.cpp  color.h  utils.cpp  utils.h
